# sheldon

./: Cargo.toml  Cross.toml  README.md  RELEASES.md
docs/: README_TEMPLATE.md
docs/src/: Configuration.md  Examples.md
src/: main.rs
src/cli/: color_choice.rs  raw.rs
src/context/: mod.rs
src/lock/: mod.rs  script.rs
src/util/: git.rs  mod.rs
tests/: lib.rs
